--- a/bestshop/blog-page.html
+++ b/bestshop/blog-page.html
@@ -973,7 +973,7 @@
 	<!-- Main Container  -->
 	<div class="main-container container">
 		<ul class="breadcrumb">
-			<li><a href="#"><i class="fa fa-home"></i></a></li>
+			<li><a href="#">Home</a></li>
 			<li><a href="#">Blog</a></li>
 			
 		</ul>
